# browser-automation

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/models/: interaction.py
backend/prompts/: system_prompt.py
backend/routes/: automate.py  browser_agent.py  interact.py  routes.py
backend/services/: browser_service.py  command_service.py  interaction_service.py
backend/utils/: browser_session.py  browser_utils.py  logger.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/screenshots/[filename]/: route.ts
frontend/src/app/automation/: page.tsx
frontend/src/app/browser-agent/: page.tsx
frontend/src/components/: ChatInterface.tsx  MessageItem.tsx  SessionControls.tsx  browser-automation.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
